add methods to print your own stats
